crates/nash-can/src/snapshots/nash_can__types__tests__annotation_no_free_vars.snap
---
source: crates/nash-can/src/types.rs
description: Int
---
Annotation {
    free_vars: [],
    typ: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 4,
            },
        },
        value: Named {
            reference: QualifiedName {
                home: ModuleName {
                    package: None,
                    name: "Basics",
                },
                name: "Int",
            },
            args: [],
        },
    },
}
