crates/nash-can/src/snapshots/nash_can__types__tests__annotation_record_ext.snap
---
source: crates/nash-can/src/types.rs
description: "{ a | x : Int }"
---
Annotation {
    free_vars: [
        "a",
    ],
    typ: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 16,
            },
        },
        value: Record {
            fields: [
                FieldType {
                    index: 0,
                    field: "x",
                    typ: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 11,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                            },
                        },
                        value: Named {
                            reference: QualifiedName {
                                home: ModuleName {
                                    package: None,
                                    name: "Basics",
                                },
                                name: "Int",
                            },
                            args: [],
                        },
                    },
                },
            ],
            ext: Some(
                "a",
            ),
        },
    },
}
