crates/nash-can/src/snapshots/nash_can__types__tests__annotation_simple_var.snap
---
source: crates/nash-can/src/types.rs
description: a
---
Annotation {
    free_vars: [
        "a",
    ],
    typ: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 2,
            },
        },
        value: Var(
            "a",
        ),
    },
}
