crates/nash-can/src/snapshots/nash_can__types__tests__type_tuple_four_errors.snap
---
source: crates/nash-can/src/types.rs
description: "( a, b, c, d )"
---
[
    TupleLargerThanThree {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 15,
            },
        },
    },
]
